--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /nodeschool/expressworks_solutions/node_modules/*
 nodeschool/expressworks_solutions/node_modules/*
 
+nodeschool/learnyounode_solutions/node_modules/*
